crates/ridl-syntax/tests/snapshots/lexer_corpus__lexer_corpus_round_trips_and_matches_snapshots@all_token_kinds.typl.snap
---
source: crates/ridl-syntax/tests/lexer_corpus.rs
expression: dump(&tokens)
input_file: crates/ridl-syntax/test_data/lexer/all_token_kinds.typl
---
LineComment "// A dense file exercising every family token kind, for the round-trip"
Whitespace "\n"
LineComment "// totality snapshot. It is token coverage, not valid typl grammar."
Whitespace "\n"
DocComment "/// doc line comment"
Whitespace "\n"
DocComment "/** doc block comment */"
Whitespace "\n"
BlockComment "/* plain block /* not nested */"
Whitespace "\n"
PackageKw "package"
Whitespace " "
Ident "veh"
Dot "."
Ident "common"
Whitespace "\n"
ImportKw "import"
Whitespace " "
Ident "marine"
Dot "."
Ident "nav"
Dot "."
Ident "Speed"
Whitespace " "
AsKw "as"
Whitespace " "
Ident "MarineSpeed"
Whitespace "\n"
InternalKw "internal"
Whitespace " "
TypeKw "type"
Whitespace " "
Ident "Frame"
Whitespace " "
Colon ":"
Whitespace " "
BytesKw "bytes"
Whitespace " "
LBracket "["
IntNumber "8"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Speed"
Whitespace " "
Colon ":"
Whitespace " "
Ident "km"
Slash "/"
Ident "h"
Whitespace " "
LBracket "["
FloatNumber "0.0"
DotDot ".."
FloatNumber "250.0"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "0.5"
RBracket "]"
Whitespace " "
Eq "="
Whitespace " "
FloatNumber "0.0"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Ratio"
Whitespace " "
Colon ":"
Whitespace " "
Percent "%"
Whitespace " "
LBracket "["
FloatNumber "0.0"
DotDot ".."
FloatNumber "100.0"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "0.1"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Vin"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "17"
Whitespace " "
MatchKw "match"
Whitespace " "
Ident "VIN_PATTERN"
RBracket "]"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "MAX_GEAR"
Whitespace " "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
Eq "="
Whitespace " "
IntNumber "6"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "VIN_PATTERN"
Whitespace " "
Eq "="
Whitespace " "
Regex "/^[A-Z]\\/[0-9]+$/"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "LABEL"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
Eq "="
Whitespace " "
String "\"a\\tb\\n\""
Whitespace "\n"
StructKw "struct"
Whitespace " "
Ident "GearState"
Whitespace " "
LBrace "{"
Whitespace "\n  "
Ident "gear"
Whitespace "     "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
LBracket "["
IntNumber "0"
DotDot ".."
IntNumber "6"
RBracket "]"
Whitespace " "
Eq "="
Whitespace " "
IntNumber "3"
Whitespace "\n  "
Ident "ratio"
Whitespace "    "
Colon ":"
Whitespace " "
FloatKw "float"
Whitespace " "
LBracket "["
FloatNumber "0.0"
DotDot ".."
FloatNumber "1.0"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "0.01"
RBracket "]"
Whitespace "\n  "
Ident "override"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Speed"
Question "?"
Whitespace "\n  "
Ident "range"
Whitespace "    "
Colon ":"
Whitespace " "
LParen "("
Ident "min"
Colon ":"
Whitespace " "
Ident "Speed"
Comma ","
Whitespace " "
Ident "max"
Colon ":"
Whitespace " "
Ident "Speed"
RParen ")"
Whitespace "\n  "
Ident "tags"
Whitespace "     "
Colon ":"
Whitespace " "
LBracket "["
Ident "Label"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Name"
Semicolon ";"
Whitespace " "
IntNumber "0"
DotDot ".."
IntNumber "32"
RBracket "]"
Whitespace "\n  "
Ident "timeout"
Whitespace "  "
Colon ":"
Whitespace " "
Duration "10ms"
Whitespace "\n  "
Ident "neg"
Whitespace "      "
Colon ":"
Whitespace " "
Minus "-"
IntNumber "40"
Whitespace "\n  "
Ident "odd"
Whitespace "      "
Colon ":"
Whitespace " "
IntNumber "042"
Whitespace "\n  "
Ident "ok"
Whitespace "       "
Colon ":"
Whitespace " "
BooleanKw "boolean"
Whitespace " "
Eq "="
Whitespace " "
TrueKw "true"
Whitespace "\n  "
Ident "off"
Whitespace "      "
Colon ":"
Whitespace " "
BooleanKw "boolean"
Whitespace " "
Eq "="
Whitespace " "
FalseKw "false"
Whitespace "\n  "
ReservedKw "reserved"
Whitespace " "
Ident "legacyChecksum"
Whitespace "\n  "
At "@"
Ident "deprecated"
Whitespace "\n  "
ReservedWord "signal"
Whitespace "\n  "
ReservedWord "model"
Whitespace "\n"
RBrace "}"
Whitespace "\n"
EnumsetKw "enumset"
Whitespace " "
Ident "WarningFlags"
Whitespace "\n"
UnionKw "union"
Whitespace " "
Ident "SensorResult"
Whitespace " "
Pipe "|"
Whitespace " "
Ident "ok"
Whitespace " "
Pipe "|"
Whitespace " "
Ident "err"
Whitespace "\n"
ErrorKw "error"
Whitespace " "
EnumKw "enum"
Whitespace " "
Ident "DiagError"
Whitespace "\n"
Error "$"
Whitespace "\n"
