crates/ridl-syntax/tests/snapshots/lexer_corpus__lexer_corpus_round_trips_and_matches_snapshots@comments.typl.snap
---
source: crates/ridl-syntax/tests/lexer_corpus.rs
expression: dump(&tokens)
input_file: crates/ridl-syntax/test_data/lexer/comments.typl
---
LineComment "// A plain line comment (typl reference §13)."
Whitespace "\n"
DocComment "/// A doc line comment (typl reference §14)."
Whitespace "\n"
DocComment "/** A doc block comment\n    spanning several lines,\n    with `[TypeName]` markdown. */"
Whitespace "\n"
BlockComment "/* A plain block comment. */"
Whitespace "\n"
BlockComment "/* Block comments do not nest: /* the inner open is text */"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "WheelRadius"
Whitespace " "
Colon ":"
Whitespace " "
Ident "m"
Whitespace " "
LBracket "["
FloatNumber "0.20"
DotDot ".."
FloatNumber "0.45"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "0.001"
RBracket "]"
Whitespace " "
LineComment "// trailing line comment"
Whitespace "\n"
