crates/ridl-syntax/tests/snapshots/lexer_corpus__lexer_corpus_round_trips_and_matches_snapshots@inline_match_regex.typl.snap
---
source: crates/ridl-syntax/tests/lexer_corpus.rs
expression: dump(&tokens)
input_file: crates/ridl-syntax/test_data/lexer/inline_match_regex.typl
---
LineComment "// Inline match-regex string types, verbatim from ridl.std (typl reference"
Whitespace "\n"
LineComment "// Appendix A) and typl reference §6.2. Each regex literal follows the `match`"
Whitespace "\n"
LineComment "// keyword, not `=`, and must lex as one Regex token between MatchKw and `]`."
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Email"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "1"
DotDot ".."
IntNumber "254"
Whitespace " "
MatchKw "match"
Whitespace " "
Regex "/^[^@]+@[^@]+\\.[^@]+$/"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Date"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "10"
Whitespace " "
MatchKw "match"
Whitespace " "
Regex "/^\\d{4}-\\d{2}-\\d{2}$/"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "TimeOfDay"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "8"
DotDot ".."
IntNumber "15"
Whitespace " "
MatchKw "match"
Whitespace " "
Regex "/^\\d{2}:\\d{2}:\\d{2}/"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Version"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "5"
DotDot ".."
IntNumber "32"
Whitespace " "
MatchKw "match"
Whitespace " "
Regex "/^\\d+\\.\\d+\\.\\d+/"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "CountryCode"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "2"
Whitespace " "
MatchKw "match"
Whitespace " "
Regex "/^[A-Z]{2}$/"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "LanguageCode"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "2"
DotDot ".."
IntNumber "5"
Whitespace " "
MatchKw "match"
Whitespace " "
Regex "/^[a-z]{2}(-[A-Z]{2})?$/"
RBracket "]"
Whitespace "\n"
