crates/ridl-syntax/tests/snapshots/lexer_corpus__lexer_corpus_round_trips_and_matches_snapshots@literals.typl.snap
---
source: crates/ridl-syntax/tests/lexer_corpus.rs
expression: dump(&tokens)
input_file: crates/ridl-syntax/test_data/lexer/literals.typl
---
LineComment "// Numeric, string, regex, and duration literals (typl reference §2.4-§2.8)."
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "A"
Whitespace " "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
Eq "="
Whitespace " "
IntNumber "0"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "B"
Whitespace " "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
Eq "="
Whitespace " "
IntNumber "42"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "C"
Whitespace " "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
Eq "="
Whitespace " "
Minus "-"
IntNumber "40"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "D"
Whitespace " "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
Eq "="
Whitespace " "
IntNumber "042"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "E"
Whitespace " "
Colon ":"
Whitespace " "
FloatKw "float"
Whitespace " "
Eq "="
Whitespace " "
FloatNumber "3.14"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "F"
Whitespace " "
Colon ":"
Whitespace " "
FloatKw "float"
Whitespace " "
Eq "="
Whitespace " "
Minus "-"
FloatNumber "40.0"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "VIN"
Whitespace "     "
Eq "="
Whitespace " "
Regex "/^[A-HJ-NPR-Z0-9]{17}$/"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "ESCAPED"
Whitespace " "
Eq "="
Whitespace " "
Regex "/a\\/b\\/c/"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "GREETING"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
Eq "="
Whitespace " "
String "\"hello \\\"world\\\"\\n\""
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "UNITS"
Whitespace " "
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
Eq "="
Whitespace " "
String "\"km/h\""
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Poll"
Whitespace "   "
Colon ":"
Whitespace " "
Ident "ms"
Whitespace "  "
LBracket "["
FloatNumber "0.0"
DotDot ".."
FloatNumber "1000.0"
RBracket "]"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "T1"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Poll"
Whitespace " "
Eq "="
Whitespace " "
Duration "10ms"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "T2"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Poll"
Whitespace " "
Eq "="
Whitespace " "
Duration "500us"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "T3"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Poll"
Whitespace " "
Eq "="
Whitespace " "
Duration "1s"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "T4"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Poll"
Whitespace " "
Eq "="
Whitespace " "
Duration "1min"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "T5"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Poll"
Whitespace " "
Eq "="
Whitespace " "
Duration "1.5h"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "MINUTES"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Name"
Whitespace " "
Eq "="
Whitespace " "
Ident "min"
Whitespace "\n"
