crates/ridl-syntax/tests/snapshots/lexer_corpus__lexer_corpus_round_trips_and_matches_snapshots@reserved_words.typl.snap
---
source: crates/ridl-syntax/tests/lexer_corpus.rs
expression: "lex_corpus_file(path, Profile::Typl)"
input_file: crates/ridl-syntax/test_data/lexer/reserved_words.typl
---
LineComment "// Words reserved family-wide but not used by typl (typl reference §1.4). The"
Whitespace "\n"
LineComment "// lexer maps every one to ReservedWord, so they can never be identifiers in a"
Whitespace "\n"
LineComment "// .typl file even though .typl rejects the declarations they belong to."
Whitespace "\n"
ReservedWord "interface"
Whitespace " "
ReservedWord "service"
Whitespace " "
ReservedWord "signal"
Whitespace " "
ReservedWord "event"
Whitespace " "
ReservedWord "command"
Whitespace " "
ReservedWord "query"
Whitespace "\n"
ReservedWord "view"
Whitespace " "
ReservedWord "display"
Whitespace " "
ReservedWord "input"
Whitespace " "
ReservedWord "action"
Whitespace " "
ReservedWord "activate"
Whitespace " "
ReservedWord "toggle"
Whitespace " "
ReservedWord "select"
Whitespace " "
ReservedWord "adjust"
Whitespace " "
ReservedWord "dismiss"
Whitespace " "
ReservedWord "fetch"
Whitespace " "
ReservedWord "fixed"
Whitespace "\n"
ReservedWord "states"
Whitespace " "
ReservedWord "during"
Whitespace " "
ReservedWord "navigate"
Whitespace " "
ReservedWord "scroll"
Whitespace " "
ReservedWord "drag"
Whitespace " "
ReservedWord "observe"
Whitespace " "
ReservedWord "surface"
Whitespace " "
ReservedWord "agent"
Whitespace "\n"
ReservedWord "require"
Whitespace " "
ReservedWord "ensure"
Whitespace "\n"
ReservedWord "model"
Whitespace " "
ReservedWord "function"
Whitespace " "
ReservedWord "let"
Whitespace " "
ReservedWord "last"
Whitespace " "
ReservedWord "case"
Whitespace " "
ReservedWord "if"
Whitespace " "
ReservedWord "then"
Whitespace " "
ReservedWord "else"
Whitespace " "
ReservedWord "when"
Whitespace " "
ReservedWord "emit"
Whitespace " "
ReservedWord "merge"
Whitespace " "
ReservedWord "current"
Whitespace " "
ReservedWord "state"
Whitespace "\n"
ReservedWord "transition"
Whitespace " "
ReservedWord "automaton"
Whitespace "\n"
ReservedWord "system"
Whitespace " "
ReservedWord "component"
Whitespace " "
ReservedWord "distribution"
Whitespace " "
ReservedWord "deployment"
Whitespace " "
ReservedWord "machine"
Whitespace " "
ReservedWord "offers"
Whitespace " "
ReservedWord "requires"
Whitespace " "
ReservedWord "for"
Whitespace "\n"
