crates/ridl-syntax/tests/snapshots/lexer_corpus__lexer_corpus_round_trips_and_matches_snapshots@type_declarations.typl.snap
---
source: crates/ridl-syntax/tests/lexer_corpus.rs
expression: dump(&tokens)
input_file: crates/ridl-syntax/test_data/lexer/type_declarations.typl
---
LineComment "// Realistic typl declarations, from the typl reference §5 and §6."
Whitespace "\n"
PackageKw "package"
Whitespace " "
Ident "veh"
Dot "."
Ident "common"
Whitespace "\n\n"
DocComment "/// Current vehicle speed."
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Speed"
Whitespace "       "
Colon ":"
Whitespace " "
Ident "km"
Slash "/"
Ident "h"
Whitespace "  "
LBracket "["
FloatNumber "0.0"
DotDot ".."
FloatNumber "250.0"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "0.5"
RBracket "]"
Whitespace " "
Eq "="
Whitespace " "
FloatNumber "0.0"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Temperature"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Cel"
Whitespace "   "
LBracket "["
Minus "-"
FloatNumber "40.0"
DotDot ".."
FloatNumber "125.0"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "0.1"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Torque"
Whitespace "      "
Colon ":"
Whitespace " "
Ident "N"
Dot "."
Ident "m"
Whitespace "   "
LBracket "["
FloatNumber "0.0"
DotDot ".."
FloatNumber "500.0"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "0.1"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "RPM"
Whitespace "         "
Colon ":"
Whitespace " "
Slash "/"
Ident "min"
Whitespace "  "
LBracket "["
FloatNumber "0.0"
DotDot ".."
FloatNumber "8000.0"
Whitespace " "
StepKw "step"
Whitespace " "
FloatNumber "10.0"
RBracket "]"
Whitespace "\n"
TypeKw "type"
Whitespace " "
Ident "Counter"
Whitespace "     "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
LBracket "["
IntNumber "0"
DotDot ".."
IntNumber "65535"
RBracket "]"
Whitespace "\n\n"
ConstKw "const"
Whitespace " "
Ident "MAX_SPEED"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Speed"
Whitespace "   "
Eq "="
Whitespace " "
FloatNumber "250.0"
Whitespace "\n"
ConstKw "const"
Whitespace " "
Ident "MAX_GEAR"
Whitespace "  "
Colon ":"
Whitespace " "
IntegerKw "integer"
Whitespace " "
Eq "="
Whitespace " "
IntNumber "6"
Whitespace "\n\n"
StructKw "struct"
Whitespace " "
Ident "DriverProfile"
Whitespace " "
LBrace "{"
Whitespace "\n  "
Ident "name"
Whitespace "     "
Colon ":"
Whitespace " "
Ident "Name"
Whitespace "\n  "
Ident "speed"
Whitespace "    "
Colon ":"
Whitespace " "
Ident "Speed"
Whitespace "\n  "
Ident "override"
Whitespace " "
Colon ":"
Whitespace " "
Ident "Speed"
Question "?"
Whitespace "\n"
RBrace "}"
Whitespace "\n"
