crates/ridl-syntax/tests/snapshots/lexer_corpus__ridl_lexer_corpus_round_trips_and_matches_snapshots.snap
---
source: crates/ridl-syntax/tests/lexer_corpus.rs
expression: "lex_corpus_file(path, Profile::Ridl)"
input_file: crates/ridl-syntax/test_data/lexer/interactions.ridl
---
PackageKw "package"
Whitespace " "
Ident "veh"
Dot "."
Ident "engine"
Whitespace "\n\n"
LineComment "// A lexer-only corpus file (the interaction grammar is not exercised here):"
Whitespace "\n"
LineComment "// the nine ridl words, durations, the `@` sigil, and the expr operator"
Whitespace "\n"
LineComment "// tokens the ridl profile activates (ridl reference §2)."
Whitespace "\n\n"
InterfaceKw "interface"
Whitespace " "
Ident "EngineStatus"
Whitespace "\n"
ServiceKw "service"
Whitespace " "
Ident "engine"
Dot "."
Ident "status"
Whitespace "\n\n"
DocComment "/// Engine speed, published every cycle."
Whitespace "\n"
SignalKw "signal"
Whitespace " "
Ident "speed"
Colon ":"
Whitespace " "
Ident "Speed"
Whitespace " "
Eq "="
Whitespace " "
FloatNumber "0.0"
Whitespace " "
At "@"
Whitespace " "
Duration "10ms"
Whitespace "\n"
EventKw "event"
Whitespace " "
Ident "overTemp"
Colon ":"
Whitespace " "
Ident "Temperature"
Whitespace " "
At "@"
Whitespace " "
LBracket "["
Duration "1ms"
DotDot ".."
Duration "100ms"
RBracket "]"
Whitespace "\n"
CommandKw "command"
Whitespace " "
Ident "setTarget"
LParen "("
Ident "goal"
Colon ":"
Whitespace " "
Ident "Speed"
RParen ")"
Whitespace "\n"
QueryKw "query"
Whitespace " "
Ident "currentGear"
LParen "("
RParen ")"
Colon ":"
Whitespace " "
Ident "Gear"
Whitespace "\n"
FixedKw "fixed"
Whitespace " "
Ident "vin"
Colon ":"
Whitespace " "
StringKw "string"
Whitespace " "
LBracket "["
IntNumber "17"
RBracket "]"
Whitespace "\n\n"
RequireKw "require"
Whitespace " "
Ident "goal"
Whitespace " "
Ge ">="
Whitespace " "
FloatNumber "0.0"
Whitespace " "
AmpAmp "&&"
Whitespace " "
Ident "goal"
Whitespace " "
Le "<="
Whitespace " "
FloatNumber "250.0"
Whitespace "\n"
EnsureKw "ensure"
Whitespace " "
Ident "result"
Whitespace " "
Neq "!="
Whitespace " "
Ident "CURRENT_GEAR"
Whitespace " "
PipePipe "||"
Whitespace " "
Bang "!"
Ident "stale"
Whitespace "\n\n"
Duration "5us"
Whitespace " "
Duration "10ms"
Whitespace " "
Duration "1s"
Whitespace "\n"
Ident "a"
Whitespace " "
Lt "<"
Whitespace " "
Ident "b"
Comma ","
Whitespace " "
Ident "a"
Whitespace " "
Le "<="
Whitespace " "
Ident "b"
Comma ","
Whitespace " "
Ident "a"
Whitespace " "
Gt ">"
Whitespace " "
Ident "b"
Comma ","
Whitespace " "
Ident "a"
Whitespace " "
Ge ">="
Whitespace " "
Ident "b"
Comma ","
Whitespace " "
Ident "a"
Whitespace " "
EqEq "=="
Whitespace " "
Ident "b"
Comma ","
Whitespace " "
Ident "a"
Whitespace " "
Plus "+"
Whitespace " "
Ident "b"
Comma ","
Whitespace " "
Ident "a"
Whitespace " "
Star "*"
Whitespace " "
Ident "b"
Whitespace "\n"
Ident "T"
Whitespace " "
Pipe "|"
Whitespace " "
Ident "E"
Whitespace "\n"
